Updated global.css with proper tailwind implementation, added dark mode for 3/4 of the site

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,14 +7,17 @@
   --font-ovo: 'Ovo', serif;
 }
 
-@utility shadow-black {
-  box-shadow: 4px 4px rgba(0, 0, 0, 0.75);
-}
-
-@utiliy shadow-white {
-  box-shadow: 4px 4px rgba(255, 255, 255, 0.25)
+@layer utilities {
+  .shadow-black {
+    box-shadow: 4px 4px rgba(0, 0, 0, 0.75);
+  }
+  .shadow-white {
+    box-shadow: 4px 4px rgba(255, 255, 255, 0.25);
+  }
 }
 
 body {
   font-family: 'Outfit', sans-serif;
 }
+
+@custom-variant dark (&:where(.dark, .dark *));
